--- a/src/package.xml
+++ b/src/package.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>S1Vision</members>
-        <members>S1VisionComponentController</members>
-        <members>S1VisionHttpFormBuilder</members>
-        <members>S1VisionJWT</members>
-        <members>S1VisionJWTBearerFlow</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>S1VisionVFPage</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>S1VisionComponent</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>S1Vision__mdt</members>
-        <name>CustomObject</name>
-    </types>
-    <types>
-        <members>S1Vision__mdt-S1VisionSetting Layout</members>
-        <name>Layout</name>
-    </types>
-    <types>
-        <members>S1Vision</members>
-        <name>StaticResource</name>
-    </types>
-    <version>34.0</version>
+	<types>
+		<members>S1Vision</members>
+		<members>S1VisionComponentController</members>
+		<members>S1VisionHttpFormBuilder</members>
+		<members>S1VisionJWT</members>
+		<members>S1VisionJWTBearerFlow</members>
+		<members>S1VisionTest</members>
+		<members>S1VisionHTTPMock</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>S1VisionVFPage</members>
+		<name>ApexPage</name>
+	</types>
+	<types>
+		<members>S1VisionComponent</members>
+		<name>AuraDefinitionBundle</name>
+	</types>
+	<types>
+		<members>S1Vision__mdt</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>S1Vision__mdt-S1VisionSetting Layout</members>
+		<name>Layout</name>
+	</types>
+	<types>
+		<members>S1Vision</members>
+		<name>StaticResource</name>
+	</types>
+	<version>34.0</version>
 </Package>
